# agent-os

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
crds/: agent-crd.yaml  agent-example.yaml  tool-example.yaml
src/redactive/agent_os/: agent_os.py  config.py  runtime_protocols.py  secrets.py  server.py
src/redactive/agent_os/agent_runtimes/: agent_os_thread.py
src/redactive/agent_os/agent_runtimes/aws_bedrock/: aws_bedrock_agent.py  runtime.py
src/redactive/agent_os/agent_runtimes/semantic_kernel/: agent_kernel.py  native_tool_to_function.py  runtime.py
src/redactive/agent_os/routes/: agent.py  aws.py  engagement.py  security.py  synapse.py
src/redactive/agent_os/runtime/: agent_os_thread.py  assertions.py  credentials_store.py  errors.py  execution_status.py  runtime_protocol.py  tool_sandbox.py
src/redactive/agent_os/runtime/semantic_kernel/: agent_kernel.py  runtime.py  tool_to_function.py
src/redactive/agent_os/spec/: agent.py  assertions.py  engagements.py  synapse.py
src/redactive/agent_os/tool_runtimes/: engagement_enforcer.py  native_tool_runtime.py
src/redactive/agent_os/tools/: bing_search_tool.py  generic_http_tool.py  google_calendar_tool.py  json_http_tool.py  protocol.py
src/redactive/cli/: agent_os.py  main.py
src/redactive/utils/: random_gen.py  servers.py
